# py_viwer_codex

./: .gitattributes  .gitignore  README.md  app.spec  pyproject.toml
.github/workflows/: ci.yml
src/my_app/: __init__.py  clean.py  main.py
tests/: test_main.py
