[project]
name = "my-app"
version = "0.2.0"
description = "PySide6 image, SVG, and PDF viewer"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyside6>=6.7",
]

[project.scripts]
my-app = "my_app.main:main"
clean = "my_app.clean:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pyinstaller>=6.9",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
